src/index.css
@import url('https://fonts.googleapis.com/css2?family=Inter&display=swap');
@tailwind base;
@tailwind components;
@tailwind utilities;

/* For AppBar */
.draggable {
  -webkit-user-select: none;
  -webkit-app-region: drag;
}

.undraggable {
  -webkit-app-region: no-drag;
}

.scrollbar::-webkit-scrollbar {

  width: 10px;
  height: 10px;
}

.scrollbar::-webkit-scrollbar-track {
  border-radius: 90vh;
  width: 20px;
}

.scrollbar::-webkit-scrollbar-thumb {
  background: #27272a;
  border-radius: 90vh;
}

